# u-tad_banin_actividad-unidad-2

./: .gitignore  README.md  README_ENTREGA_1.md  cli.py  dashboard.py  dashboard_kaggle_tweets.py  dashboard_rapidapi_tweets.py  extractor.py  main.py  pyproject.toml  requirements.txt  ruff.toml
data/: rapidapi_tweets.csv
data_loaders/: __init__.py  base.py  csv.py  json.py  kaggle.py  utils.py
exporters/: __init__.py  base.py  csv.py
loaders/: __init__.py  csv.py  json.py  kaggle.py  rapidapi_twitter.py  utils.py
